--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.2",
+    "@mui/styled-engine-sc": "^5.1.0",
+    "add": "^2.0.6",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "pg": "^8.2.1",
@@ -12,7 +17,9 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.1",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "styled-components": "^5.3.3",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
